# Shader

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
scripts/: embed_font.py  verify-s01.sh  verify-s02.sh  verify-s03.sh  verify-s04.sh  verify-s05.sh  verify-s06.sh  verify-s07.sh
src/: magnetar.rc  main.cpp
src/core/: app.cpp  app.h  frame_control.cpp  frame_control.h  renderer.cpp  renderer.h
src/editor/: autocomplete.cpp  autocomplete.h  code_editor.cpp  code_editor.h  compiler.cpp  compiler.h
src/glad/: glad.c  glad.h
src/shader/: multipass_parser.cpp  multipass_parser.h  multipass_pipeline.cpp  multipass_pipeline.h  shader_format.h  shadertoy_format.cpp  shadertoy_format.h  uniform_bridge.cpp  uniform_bridge.h
src/ui/: file_dialog.cpp  file_dialog.h  imgui_manager.cpp  imgui_manager.h  layout.cpp  layout.h  magnetar_imconfig.h  session.cpp  session.h  settings.cpp  settings.h  shortcuts.cpp  shortcuts.h  tab_manager.cpp  tab_manager.h  template_picker.cpp  template_picker.h  theme.cpp  theme.h
src/ui/fonts/: oxproto_regular.h  space_mono_regular.h
